manifests/tenant-two/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - tenant-two.example.com
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - tenant-two.example.com
    tls:
      mode: MUTUAL
      credentialName: ingressgateway-certs
